Restructure CSS files and update components

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -14,3 +14,8 @@
 @import url('./02_components/_navbar.css');
 @import url('./02_components/_data-table.css');
 @import url('./02_components/_dropdowns.css');
+
+/* Ensure assets are loaded */
+:root {
+    --asset-check: "loaded";
+}
