--- a/assets/styles/01_settings/_tokens.css
+++ b/assets/styles/01_settings/_tokens.css
@@ -171,6 +171,7 @@
   =============================================*/
 
   /* Form Inputs */
+  --input-height-xs: 1.5rem;     
   --input-height-sm: 2rem;     /* 32px */
   --input-height-md: 2.5rem;   /* 40px */
   --input-height-lg: 3rem;     /* 48px */
