--- a/assets/styles/02_components/_buttons.css
+++ b/assets/styles/02_components/_buttons.css
@@ -24,6 +24,7 @@
 /* Navbar toggle button */
 .btn-sidebar-toggle {
     composes: btn-custom;
+    font-size: var(--font-size-sm);
     background-color: var(--color-surface-secondary);
     color: var(--color-text-default);
 }
@@ -31,6 +32,7 @@
 /* Sidebar toggle button */
 .btn-sidebar-toggle-inner {
     composes: btn-custom;
+    font-size: var(--font-size-sm);
     width: 100%;
     margin-top: auto;
     background-color: var(--color-warning-500);
@@ -54,6 +56,7 @@
 
 .btn-period.active {
     background-color: var(--color-blue-600);
+    font-size: var(--font-size-sm);
     color: var(--color-text-inverse);
     border-color: var(--color-blue-600);
 }
