--- a/assets/styles/02_components/_dropdowns.css
+++ b/assets/styles/02_components/_dropdowns.css
@@ -1,6 +1,7 @@
 /* _dropdowns.css */
 .dd-control {
-  height: var(--input-height);
+  font-size: var(--font-size-sm);
+  height: var(--input-height-sm);
   border: 1px solid var(--color-border-weak);
   border-radius: var(--radius-md);
   background-color: var(--color-surface-primary);
