--- a/assets/styles/02_components/_forms.css
+++ b/assets/styles/02_components/_forms.css
@@ -6,7 +6,8 @@
 
 /* Form Control */
 .form-control-custom {
-    height: var(--input-height);
+    font-size: var(--font-size-sm);
+    height: var(--input-height-xs);
     padding: var(--space-2);
     font-size: var(--font-size-sm);
     border: 1px solid var(--color-border-weak);
@@ -17,6 +18,7 @@
 
 /* Input Variants */
 .input-short {
+    font-size: var(--font-size-sm);
     width: 80px;
     text-align: center;
     padding: var(--space-1);
@@ -35,7 +37,7 @@
     font-size: var(--font-size-sm);
     color: var(--color-text-default);
     margin-bottom: var(--space-2);
-    font-weight: var(--font-weight-medium);
+    font-weight: var(--font-weight-semibold);
     display: block;
 }
 
@@ -73,7 +75,7 @@
 }
 
 .period-type__description {
-    font-size: var(--font-size-sm);
+    font-size: var(--font-size-xs);
     color: var(--color-text-muted);
     margin-top: var(--space-1);
 }
@@ -87,4 +89,12 @@
 
 .filter-checklist .form-check {
     margin: 0;
+}
+
+.table-subtitle {
+    font-size: var(--font-size-base);
+}
+
+.table-title {
+    font-size: var(--font-size-md);
 }
