--- a/assets/styles/01_settings/_utilities.css
+++ b/assets/styles/01_settings/_utilities.css
@@ -1,16 +1,4 @@
-
 /* _utilities.css */
-.visually-hidden {
-  display: none !important;
-  visibility: hidden !important;
-  pointer-events: none !important;
-  position: absolute !important;
-  clip: rect(0 0 0 0) !important;
-  clip-path: inset(50%) !important;
-  margin: 0 !important;
-  padding: 0 !important;
-  border: none !important;
-}
 
 .flex-center {
   display: flex;
@@ -42,16 +30,24 @@
   padding: var(--space-4);
 }
 
-.container {
-  width: 100%;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: var(--space-4);
-  padding-right: var(--space-4);
-}
-
 .smooth-transition {
   transition-property: all;
   transition-timing-function: var(--transition-timing-default);
   transition-duration: var(--transition-duration-base);
+}
+
+.transition-all {
+  transition: all var(--transition-duration-base) var(--transition-timing-default);
+}
+
+.transition-colors {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+  transition-timing-function: var(--transition-timing-default);
+  transition-duration: var(--transition-duration-base);
+}
+
+.transition-border {
+  transition-property: border-color;
+  transition-timing-function: var(--transition-timing-default);
+  transition-duration: var(--transition-duration-fast);
 }
